--- a/library_management_systems/nbproject/project.properties
+++ b/library_management_systems/nbproject/project.properties
@@ -35,18 +35,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/library_management_systems
 endorsed.classpath=
 excludes=
-file.reference.jcalendar-1.4.jar=C:\\Users\\divyp\\OneDrive\\Desktop\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-1=D:\\UPES\\SEM-5\\Minor\\jcalendar-1.4.jar
-file.reference.mysql-connector-java-8.0.11.jar=C:\\Users\\divyp\\OneDrive\\Desktop\\mysql-connector-java-8.0.11.jar
-file.reference.mysql-connector-java-8.0.26.jar=D:\\Softwares\\mysql-connector-java-8.0.26\\mysql-connector-java-8.0.26.jar
+file.reference.jcalendar-1.1.4.jar=C:\\Users\\Rajat Gupta\\Desktop\\jcalendar-1.1.4.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Rajat Gupta\\Desktop\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-8.0.11.jar-1=C:\\Users\\Rajat Gupta\\Desktop\\mysql-connector-java-8.0.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.11.jar}:\
-    ${file.reference.mysql-connector-java-8.0.26.jar}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}:\
-    ${libs.absolutelayout.classpath}
+    ${file.reference.mysql-connector-java-8.0.11.jar-1}:\
+    ${file.reference.jcalendar-1.1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -86,7 +83,7 @@ main.class=My_forms.LoginForm
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_11
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
