--- a/library_management_systems/nbproject/private/private.properties
+++ b/library_management_systems/nbproject/private/private.properties
@@ -2,7 +2,10 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.jcalendar-1.1.4.jar=D:\\UPES\\SEM-5\\Minor\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar=D:\\UPES\\SEM-5\\Minor\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-8.0.11.jar-1=D:\\Softwares\\mysql-connector-j-8.0.31
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Rajat Gupta\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\Divyam\\AppData\\Roaming\\NetBeans\\15\\build.properties
